--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,11 +26,17 @@ h1, h3{
   justify-content: center;
   margin: 30px 40px;  
 }
+
 .form-tag{
   font: 600 44px/36px;
   color: #000;
 }
-
+.card-img-top {
+  width: 100%;
+  height: 35vw;
+  border-radius: 10% !important;
+  object-fit: cover;
+}
 .sign-text{
   font: 700 2.5em/2em;
   text-decoration: none;
@@ -48,7 +54,7 @@ h1, h3{
   border: 2px solid red;
 }
 
- ul{
+ul{
   list-style-type: none;
 }
 .text-secondary{
